# uiucse221

./: CMakeLists.txt  README.md  files.c
.tmp.driveupload/: 1000  1004  1008  1012  1016  1018  1022  1026  1030  1034  1038  1040  1044  1048  1052  1056  1058  1062  1066  1070  1074  1078  1082  1084  1088  1092  1096  1100  1102  1106  1108  1110  1114  1118  1122  1124  1126  1130  1132  1134  (+756 more)
ICS/: README.md
ICS/Assignment/: assignment-1.c  assignment-2.c  assignment-3.c  assignment-4.c  assignment-5.c
ICS/Class Practice/: bool.cpp  power_of_2(with math.h).c  power_of_2.c  practice_1.c  switch(without char).c  switch.c
ICS/H.W/: find the character is vowel or consonant(without validation).c  find the character is vowel or consonant.c
ICS/ICS Problem set/: 01 Intro.docx  02 Operators.docx  03 Conditions.docx  ~$ Conditions.docx  ~$ Operators.docx
ICS/Personal Practice/: Display multiple variables.c  Sum and Difference of Two Numbers.c  function in c.c  problem-1.c  problem-2.c  problem-3.c  problem-4.c  problem-5.c  result for a subject.c  separate-intiger.c  test.c  tuition fee.c
ICS/Practice 1/: README.md
ICS/Practice 1/01. Intro/: README.md
ICS/Practice 1/02. Operators/: operator 02.c
ICS/Practice 1/03. Conditions/: 03.Condition_1.c  03.Condition_14.c  03.Condition_2.c  03.Condition_3.c  03.Condition_4.c
ICS/Practice Problem/: README.md
ICS/Practice Problem/01. Intro/: 01. Intro-1.c  01. Intro-3.c  01. Intro-4.c  01. Intro-6.c  01. Intro-7.c  README.md
ICS/Practice Problem/02. Operators/: 01. Operators-1.c  01. Operators-2.c  01. Operators-3.c  01. Operators-4.c  operator 03.c  operator 04.c
ICS/Practice Problem/03. Conditions/: 03.Condition_1.c  03.Condition_10.c  03.Condition_11.c  03.Condition_13.c  03.Condition_14.c  03.Condition_15.c  03.Condition_4.c  03.Condition_5.c  03.Condition_7.c
ICS/Practice Problem/04. Loop/: 04. Loop-01.c  04. Loop-02.c  04. Loop-03.c  04. Loop-04.c  04. Loop-05.c  04. Loop-06.c  04. Loop-07.c  04. Loop-08.c  04. Loop-09.c  04. Loop-10.c  04. Loop-11.c  04. Loop-12.c  04. Loop-13.c  04. Loop-14.c  04. Loop-15.c
OOP/: output.txt
OOP/Assignments/Assignment2/: Bus.java  CNG.java  Car.java  Main.java  MotorVehicle.java  Rickshaw.java  Vehicles.java
OOP/Assignments/CTAssignment/: CashOut.java  Dashboard.java  Login.java  Main.java  Recharge.java  RechargeORCashOut.java  user.txt
OOP/GUI/AWT/: BtnEvent.java
OOP/GUI/CT3/: Calculator.java
OOP/GUI/Login/: Login.java  Main.java
OOP/GUI/LoginReg/: Login.java  Main.java  Reg.java  User.java
OOP/GUI/SceneBuilder/: Test.java  test.fxml
OOP/GUI/StudentPanel/: Main.java  Student.java  UI.java
OOP/GUI/app/: GUI.java  Main.java
OOP/GUI/suptiAunty/: GUI.java  Main.java
OOP/Practice/: API.java  ArrList.java  CompareNum.java  CountVowel.java  EmployeeAccess.java  FindCirclePoint.java  GarbageCollection.java  MinimumBalanceException.java  RegularExp.java  RemoveWithRegularExp.java  StringSort.java  TakeInput.java  Test.java  User.java  hello.java  test.java
OOP/Practice/Collection/: ArrayL.java  HashMp.java  HashSetDemo.java  HashSett.java  Point.java  Q5.java  Test.java
OOP/Practice/Exception/: Main.java
OOP/Practice/File/: FileWrite.java
OOP/Practice/FileStream/: File.java
OOP/Practice/InnerClass/: anonymous.java
OOP/Practice/OOP_CT_ANIKA_MAAM/: vehicles.java
OOP/Practice/TestCode/: C.java  ComparatorClass.java  I.java  I2.java  Main.java  sb.java  test.java  xyz.java
OOP/Practice/annynomus/: annynomus.java
OOP/Solve/Test/: ArrayList.java  Err.java  ErrorFix.java  ExceptionCT.java  Final.java  Main.java  Men.java  People.java  SP.java  Samsung_S21.java  SmartPhone.java  Test.java  Women.java  abs.java  main.java  xyz.java
RIfat(011221235)/ICS/Class Practice/: bool.cpp  switch(without char).c
RIfat(011221235)/ICS/H.W/: find the character is vowel or consonant(without validation).c
RIfat(011221235)/ICS/Personal Practice/: function in c.c
SPL/: 2.c  5.c  Untitled1.c  Untitled2.c  codechefPROGLANG.c  countLine.c  dir.c  file.txt  struct1.c  test.c
SPL/Class Practice/: 1.c  2.c  3.c  Untitled1.c  Untitled2.c  Untitled3.c  practice spl 2.c  practice spl 3.c  practice spl 4.c  practice spl 5.c  practice spl 6.c  practice spl 7.c  practice spl 8.c  practice spl 9.c  practice spl.c
SPL/HW/: 1.c  2.c  offline-02.c  ofline-2.c
SPL/Pattern Practice/: Alphabetic-RIght-Angle-Tringle-1.c  Alphabetic-RIght-Angle-Tringle-2.c  Alphabetic-Upside-Down-RIght-Angle-Tringle-1.c  Alphabetic-Upside-Down-RIght-Angle-Tringle-2.c  Binary-RIght-Angle-Tringle-1.c  Binary-RIght-Angle-Tringle-2.c  Binary-Upside-Down-RIght-Angle-Tringle-1.c  Binary-Upside-Down-RIght-Angle-Tringle-2.c  Number-Left-Angle-Tringle.c  Number-RIght-Angle-Tringle-1.c  Number-RIght-Angle-Tringle-2.c  Number-Upside-Down-Left-Angle-Tringle.c  Number-Upside-Down-RIght-Angle-Tringle-1.c  Number-Upside-Down-RIght-Angle-Tringle-2.c  Right-Rotated-Pyramid-1.c  Right-Rotated-Pyramid-2.c  Right-Rotated-Pyramid.c  Untitled.c  Untitled1.c  Untitled10.c  Untitled11.c  Untitled13.c  Untitled3.c  Untitled4.c  Untitled5.c  Untitled6.c  Untitled7.c  Untitled8.c  Untitled9.c
SPL/Practice/: 1.c  2.c  3.c  4.c  5.c  54.c  6.c  7.c  Untitled.c  Untitled2.c  Untitled3.c  Untitled4.c  Untitled5.c  Untitled6.c  matrix_multiplication.c  normal martix.c  problem 15.c  q1.c  q2.c  q3.c
SPL/Practice Problem/: 10.c  11.c  12.c  3.c  4.c  6.c  7.c  8.c
SPL/Practice Problem/2D Array/: 1.c  10.c  12.c  13.c  14.c  15.c  2.c  3.c  4.c  5.c  6.c  7.c  8.c  9.c
SPL/Practice Problem/Array/: 01.c  02.c  03.c  04.c  05.c  06.c  07.c  08.c  09.c  10.c  11.c  12.c  13.c  14.c  15.c  16.c  17.c  18.c  19.c  2.c  20.c
SPL/Practice Problem/Function/: 1.c  10.c  11.c  12.c  13.c  14.c  15.c  16.c  17.c  18.c  19.c  2.c  20.c  3.c  4.c  5.c  (+4 more)
SPL/Question/: 1.c
SPL/SPL Assignment SEC-C/: 02.c  05.c  06.c  07.c  08.c  09.cpp  10.c  11.c  12.c  13.c  14.c  15.c  16.c  17.c  18.c  19.c  20.c  21.c  22.c  23.c  24.c  25.c  26.c  27.c  28.c  29.c  30.c  32.c  33.c  35.c  36.c  37.c  38.c  39.c  40.c  41.c  42.c  43.c  45.c
(+110 files in other folders)
